--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/config.tex
@@ -36,7 +36,7 @@
 %%%%% Multiple Columns %%%%%
 % see: https://www.overleaf.com/learn/latex/Multiple_columns
 \usepackage{multicol}
-
+\usepackage{wrapfig}
 
 \hypersetup{
     colorlinks=true,
