--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 3/LaTex/Assignment 3.tex
@@ -9,17 +9,17 @@
 \begin{document}
 
 %%% Import Titlepage %%%
-%\input{Titlepage.tex}
+\input{Titlepage.tex}
 
 
 %%% Import Aufgabe 1 %%%
-%\input{Aufgabe_1.tex}
-%\newpage
+\input{Aufgabe_1.tex}
+\newpage
 
 
 %%% Import Aufgabe 2 %%%
-%\input{Aufgabe_2.tex}
-%\newpage
+\input{Aufgabe_2.tex}
+\newpage
 
 %%% Import Aufgabe 3 %%%
 \input{Aufgabe_3.tex}
