added aufgabenstellung and transcripted it into the document

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Aufgabe_1.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Aufgabe_1.tex
@@ -1,10 +1,10 @@
 %%%%% TODO %%%%%
 % subsection a % Zwei Seiten layout ? damit die ganzen Bäume nicht so viel Platz wegnehmen
 
-\section*{{Problem 1: AVL-Bäume}}
+\section*{Problem 1: Rot-Schwarz Bäume und (2,4)-Bäume}
+
+In Aufgabe 3 auf dem 3. Aufgabenblatt wurden rot-schwarz Bäume definiert.\\
 
 
-\textbf{a)} 
-
-
-\textbf{b)} 
+\textbf{a)} Zeigen Sie: Rot-schwarz Bäume und (2, 4)-Bäume sind äquivalent. Genauer: es gibt eine lokale Transformation, welche Gruppen von Knoten im rot-schwarz Baum in Knoten im (2, 4)-Baum überführt, und umgekehrt. Geben Sie eine
+solche Transformation an, und begründen Sie, dass Ihre Transformation die Bedingungen an rot-schwarz Bäume und an (2, 4)-Bäume erfüllt.
