--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Aufgabe_2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Aufgabe_2.tex
@@ -1,9 +1,10 @@
-\section*{Problem 2: findRange} 
+\section*{Problem 2: (2,3)-Bäume und (2,4)-Bäume} 
 
 
-\textbf{a)} 
+\textbf{a)} Fügen Sie die Schlüssel A, L, G, O, D, T, S, X, Y, Z in dieser Reihenfolge in einen anfangs leeren (2, 3)-Baum ein. Löschen Sie sodann die Schlüssel Z, A, L. Zeichnen Sie den Baum nach jedem Einfüge- und Löschvorgang, und zeigen Sie die Modifikation, welche durchgeführt werden. \\
 
-\textbf{b)} 
+\noindent
+\textbf{b)} Wiederholen Sie die Teilaufgabe (a) mit einem (2, 4)-Baum. \\
 
 
 
