Added Lennards task 2b

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Assignment 4.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Assignment 4.tex
@@ -1,5 +1,13 @@
 %%%%% TODO %%%%%
-% change the numbering on the fooder
+% Aufgabe 1
+% a) Lennard
+% Aufgabe 2
+% a) Ich
+% b) Lennard
+% Aufgabe 3
+% a) Ich
+% b) Lennard
+% c) ich
 
 \documentclass[a4paper]{article}
 
