--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Aufgabe_3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/Aufgabe_3.tex
@@ -2,6 +2,26 @@
 
 \textbf{a)} Beschreiben Sie, wie man in einem (a, b)-Baum mit n Schlüsseln die Operation succ(k) implementieren kann. Was ist die Laufzeit?\\
 
+$\Rightarrow$ succ(k) - finde den Nachfolge vom Schlüssel $k$
+
+\begin{enumerate}
+\item Suche den Knoten $"i"$, der den Eintrag $k$ enthält
+\item Wenn $k$ nicht das größte Element in $u$ ist, schaue ob es noch ein Teilbaum zwischen dem Element $k$ und seinem direkten Nachfolger gibt.
+	\begin{itemize}
+		\item Wenn Nein $\rightarrow$ dann gib den direkten Nachfolger von $k$ zurück
+		\item Wenn ja, gehe in den Teilbaum und gebe das kleinste Element zurück
+	\end{itemize}
+\item Wenn $k$ das größte Element in $u$ ist:
+	\begin{itemize}
+		\item wenn $i$ ein rechten Teilbaum besitzt, gehe in den rechten Teilbaum und gebe das kleinste Element zurück
+		\item ansonsten gehe zum Elternknoten und suche das erste Element, das größer als $k$ ist und gebe es zurück
+	\end{itemize}
+\end{enumerate}
+
+$\Rightarrow$ Die Laufzeit beträgt $O(logn)$, da die Höhe eines (a,b)-Baums $O(logn)$ ist. \\
+
+
+
 \noindent
 \textbf{b)} Beschreiben Sie, wie man in einem (a, b)-Baum mit n Schlüsseln die Operation $findRange(k1 , k2)$ implementieren kann, die alle Schlüssel $k$ liefert, für die
 $k1 \leq k \leq k2$ ist. Die Laufzeit soll $O(b loga n + s)$ betragen. Dabei ist $s$ die Anzahl der gelieferten Schlüssel.\\
