--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 4/LaTex/config.tex
@@ -38,6 +38,14 @@
 \usepackage{multicol}
 
 
+% Text block indentation
+%\lipsum[1]
+%\begin{addmargin}[1em]{2em}% 1em left, 2em right
+%\lipsum[2]
+%\end{addmargin}
+%\lipsum[3]
+\usepackage{scrextend}
+
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
