added lennards tasks

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 5/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 5/LaTex/config.tex
@@ -46,6 +46,9 @@
 %\lipsum[3]
 \usepackage{scrextend}
 
+% https://www.overleaf.com/learn/latex/Code_listing
+\usepackage{listings}
+
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
