--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 5/LaTex/Aufgabe_3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 5/LaTex/Aufgabe_3.tex
@@ -1,14 +1,40 @@
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+\lstset{style=mystyle}
+
 \section*{{Problem 3: Implementierung von Skiplisten}} 
 
 Implementieren Sie eine Skipliste in Scala (oder Java)
 
+\noindent
+\textbf{Datei: SkipList.java}
+\lstinputlisting[language=Java]{./Code/SkipList.java}
 
+\noindent
+\textbf{Datei: Node.java}
+\lstinputlisting[language=Java]{./Code/Node.java}
 
- 
-
-
-
-
-
-
-
+\noindent
+\textbf{Datei: SkipList\_test.java}
+\lstinputlisting[language=Java]{./Code/SkipList_test.java}
